# bohr_project

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  Dockerfile  README.md  data_structure.md  deploy.env  docker-compose.yml  pyproject.toml  terraform_old.tfvars
.devcontainer/: devcontainer.json
.github/workflows/: build-airflow-image.yml  build-api-proxy.yml  render-diagrams.yml
airflow-chart/: Chart.yaml  credentials.yaml  values.template.yaml
api-host/: ampere-api-control-plane.yaml  ampere-api.yaml
api_proxy/: .dockerignore  Dockerfile  README.md
api_proxy/app/: __init__.py  config.py  database.py  main.py
custom_images/: README.md
custom_images/airflow/: Dockerfile  requirements.txt
dbt-chart/: dbt-data-pvc.yaml
docker-mssql/: Dockerfile
docs/: README.md
docs/diagrams/: Internal-Cluster-Containers.puml  containers.puml  context.puml  workflow.puml
helmfile/: README.md  env.yaml  env_template.yaml  environments.yaml  helmfile.yaml
minio-chart/: credentials.yaml
minio-chart/templates/: pvc.yaml  secrets.yaml
ms-chart/templates/: mssql-pv.yaml  mssql-service.yaml
old_infra/: README.md  Vagrantfile  cluster_config.rb  deploy.sh
old_infra/airflow-chart/: git-credentials.yaml  values.template.yaml
old_infra/api_proxy/: README.md  data_structure.md
old_infra/dbt-chart/: dbt-code-pvc.yaml  dbt-code-tools.yaml  dbt-data-tools.yaml
old_infra/minio-chart/: Chart.yaml  values.template.yaml
old_infra/ms-chart/: .sops.yaml  Chart.yaml  (+2 more)
other_scripts/: post-deployment.sh
provision/: master.sh  requirements.sh
terraform/: README.md
(+110 files in other folders)
